# hatt_media_2016

cuda/src/: CMakeLists.txt  DSC.cxx  DSC.h  DSCCostFunction.h  PatchRayCast.cxx  PatchRayCast.h  PatchRayCastCostFunction.cxx  PatchRayCastCostFunction.h  RayCast.cxx  RayCast.h  RayCastCostFunction.h  kernelDASH.cu  kernelDSC.cu  kernelPatchRayCast.cu  kernelRayCast.cu  kernelSPLAT.cu  kernelSplatDRR.cu  main.cxx  mainDASH.cxx  mainDRR.cxx  mainDSC.cxx  mainHybrid.cxx  mainPatchRayCast.cxx  mainRayCast.cxx  mainRegistration.cxx
input/: pc.raw  pfile.txt  pfile.txt1  pfile.txt2  simxray1.raw
matlab/: CreateAllModels.m  CreateModelGPU.m  CreateModelGPU_DRR.m  XUS_Simulation.m  canny.m  lowpassfilter.m  mha_read_volume.m  phasesym.m
matlab/data/: probe.mhd  segmentation.mhd
output/: log.txt
